# metrics-service

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: config.rs  error.rs  main.rs  router.rs  state.rs
src/handlers/: health.rs  metrics.rs  mod.rs  stats.rs
src/models/: metric.rs  mod.rs  stats.rs
