[package]
name    = "metrics-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum               = "0.8"
tokio              = { version = "1", features = ["full"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
dashmap            = "5"
tokio-stream       = { version = "0.1", features = ["sync"] }
thiserror          = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
